[tool.uv]
package = false

[project]
name = "rational-rampage"
version = "0.1.0"
description = "Educational game for learning rational function graphing"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "plotly>=6.2.0",
    "streamlit>=1.46.1",
    "sympy>=1.14.0",
]
